Fixed overlapping text upon file upload

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,7 +100,7 @@ h1{
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 11px;
-  margin-top: 9px;
+  margin-top: 2px;
 }
 
 label:hover, label:focus, .submit:focus, .submit:hover{
@@ -109,8 +109,11 @@ label:hover, label:focus, .submit:focus, .submit:hover{
 
 .file-name {
   position: absolute;
-  bottom: -40px;
-  left: 25px;
+  text-align: left;
+  width: 300px;
+  bottom: 0px;
+  left: 225px;
+  top: 3px;
   font-size: 1.3rem;
   color: rgb(8, 8, 8);
 }
